crates/pane-tui/src/ui/snapshots/pane__ui__tests_resize__resize_border_left.snap
---
source: crates/pane-tui/src/ui/tests_resize.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  1                                                                                                                +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
┏──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
┃  zsh                                                                                                              +  │
┃ ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┃                                                                                                                      │
┗──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
  h/l  move ·  Esc  quit
